<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.login.LoginActivity">

    <com.nurhidayaatt.storyapp.presentation.custom_view.TextInputLayout
        android:id="@+id/il_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/il_login_password">

        <com.nurhidayaatt.storyapp.presentation.custom_view.TextInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.nurhidayaatt.storyapp.presentation.custom_view.TextInputLayout>

    <com.nurhidayaatt.storyapp.presentation.custom_view.TextInputLayout
        android:id="@+id/il_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.nurhidayaatt.storyapp.presentation.custom_view.TextInputEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.nurhidayaatt.storyapp.presentation.custom_view.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:layout_constraintEnd_toStartOf="@id/btn_login"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/il_login_password"
        app:strokeColor="?attr/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/login"
        app:icon="@drawable/ic_login"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_register"
        app:layout_constraintTop_toTopOf="@id/btn_register" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>