...
    <string name="transition_name">name</string>
    <string name="transition_story">story</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="error_email">Wrong email pattern</string>
    <string name="error_password">Password at least 8 letters</string>

    <string name="label_story">Story</string>
    <string name="label_register">Register</string>
    <string name="label_detail">Detail</string>
    <string name="label_add_story">Add Story</string>

...
