<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nurhidayaatt.storyapp.presentation.main.MainActivity">
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:showAsAction="always" />
</menu>