...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_story"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="visible"
                tools:listitem="@layout/item_story" />

...
